# json-to-Xml-python-assessment

./: README.md  example.json  json_to_xml.py
json2xml/: pyproject.toml  readme.md
json2xml/json2xml/: cli.py
